<resources>
    <string name="app_name">Ship Cargo</string>
    <string name="hello_welcome">Hello Welcome</string>
    <string name="home">Home</string>
    <string name="schedule">Schedule</string>
    <string name="add">Add</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="destination">Destination</string>
    <string name="pick_up">Pick Up</string>
    <string name="name">Name</string>
    <string name="vehicle_type">vehicle Type</string>
    <string name="book_a_card_for_cargo">Book A Card for Cargo</string>
    <string name="create_an_account_with_us">create an account with us</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="fill_in_the_details">Fill in the details</string>
    <string name="cargo_name">Cargo Name</string>
    <string name="phone">Phone</string>
    <string name="location_description">Location Description</string>
    <string name="destination_address">Destination Address</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="pick_up_date">Pick Up date</string>
    <string name="view_track">View Track</string>
</resources>