<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradiesn"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"

    tools:context=".SignUpActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="Sign Up"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="24sp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:fontFamily="@font/poppins"
        android:text="@string/create_an_account_with_us"
        android:textSize="14sp" />


    <EditText
        android:id="@+id/edt_s_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_white"
        android:hint="@string/username"
        android:textColor="@color/black"
        android:textColorHint="@color/text_color"
        android:padding="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        />
    <EditText
        android:id="@+id/edt_s_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_white"
        android:hint="Email Address"
        android:textColorHint="@color/text_color"
        android:textColor="@color/black"
        android:padding="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        android:inputType="textEmailAddress"

        />

    <EditText
        android:id="@+id/edt_s_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_white"
        android:hint="Password"
        android:textColor="@color/black"
        android:textColorHint="@color/text_color"
        android:padding="10dp"
        android:textSize="14sp"
        android:inputType="textPassword"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"


        />

    <ProgressBar
        android:id="@+id/progressBarSubmitLoginssN"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:visibility="gone"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btn_signUp_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/poppins"
        android:background="@drawable/btn"
        android:padding="10dp"
        app:backgroundTint="@null"

        android:textSize="14sp"
        android:text="@string/sign_up"
        android:textStyle="bold"/>


    <Button
        android:id="@+id/btn_login_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/poppins"
        android:background="@drawable/btn_all"
        android:padding="10dp"
        app:backgroundTint="@null"

        android:textSize="14sp"
        android:text="@string/login"
        android:textStyle="bold"/>









</LinearLayout>