<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradiesn"
    tools:context=".BookingDetailedFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/today_day_detailed"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="24"
                android:textColor="@color/black"
                android:textSize="44sp"

                android:layout_marginStart="10dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/calendayDAY_detailed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="17dp"
                    android:fontFamily="@font/poppins"
                    android:text="Wed"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/theMonth_detailed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="@font/poppins"
                    android:text="Augaust 2022"
                    android:textSize="14sp" />
            </LinearLayout>








            <TextView
                android:id="@+id/priceUpNoneJodetailed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="Ksh 4,000"
                android:textColor="@color/maroon"

                android:padding="5dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:textSize="25sp"
                android:gravity="right"
                android:layout_marginTop="10dp"

                />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/btn_white_k">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                />


            <TextView
                android:id="@+id/phoneNumberDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="25dp"
                android:textColor="@color/blue_color_code"
                android:textSize="16sp"
                android:drawableStart="@drawable/ic_baseline_phone_24"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pick up Address"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                />


            <TextView
                android:id="@+id/pickupdetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="25dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="16sp"
                android:drawableStart="@drawable/ic_baseline_pin_drop_24"
                />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/destination_address"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                />


            <TextView
                android:id="@+id/destinationAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="25dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="16sp"
                android:drawableStart="@drawable/ic_baseline_pin_drop_24_red"
                />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_description"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                />


            <TextView
                android:id="@+id/locationDESCIPR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="25dp"
                android:textColor="@color/text_color"
                android:textStyle="bold"
                android:textSize="16sp"

                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pick_up_date"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                />


            <TextView
                android:id="@+id/pickupDATEtIME"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="25dp"
                android:textColor="@color/text_color"
                android:textStyle="bold"
                android:textSize="16sp"

                />

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/text_color"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="2dp"
                android:layout_marginStart="3dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btn_decline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/poppins"
                    android:background="@drawable/btn_all"
                    android:padding="10dp"
                    app:backgroundTint="@null"
                    android:textSize="14sp"
                    android:text="@string/view_track"
                    android:layout_weight="1"
                    android:textStyle="bold"/>

                <Button
                    android:id="@+id/btn_accept"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/poppins"
                    android:background="@drawable/btn"
                    android:padding="10dp"
                    app:backgroundTint="@null"
                    android:layout_weight="1"

                    android:textSize="14sp"
                    android:text="@string/accept"
                    android:textStyle="bold"/>
            </LinearLayout>


            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/text_color"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="2dp"
                android:layout_marginStart="3dp" />






        </LinearLayout>
    </LinearLayout>

</FrameLayout>