<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/btn_all"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:id="@+id/hllauud"
    android:layout_marginTop="10dp"
    app:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_all"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:padding="5dp"
                android:text="@string/name"
                android:textColor="@color/white"
                android:textSize="14sp" />


            <TextView
                android:id="@+id/cargoNameTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:padding="5dp"
                android:text="John Maina"
                android:textColor="@color/white"
                android:textSize="14sp" />




        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:padding="5dp"
                android:text="@string/vehicle_type"
                android:textColor="@color/white"
                android:textSize="14sp" />


            <TextView
                android:id="@+id/vehicleTypeTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:padding="5dp"
                android:text="Salon"
                android:textColor="@color/white"
                android:textSize="14sp" />




        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:padding="5dp"
                android:text="@string/pick_up"
                android:textColor="@color/white"
                android:textSize="14sp" />


            <TextView
                android:id="@+id/pickUpTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:padding="5dp"
                android:text="Nairobi Kangemi"
                android:textColor="@color/white"
                android:textSize="14sp" />




        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:padding="5dp"
                android:text="@string/destination"
                android:textColor="@color/white"
                android:textSize="14sp" />


            <TextView
                android:id="@+id/destinationTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:padding="5dp"
                android:text="Nairobi Kangemi"
                android:textColor="@color/white"
                android:textSize="14sp" />




        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:padding="5dp"
                    android:src="@drawable/ic_baseline_calendar_month_24" />


                <TextView
                    android:id="@+id/createdAtTwo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:padding="5dp"
                    android:text="20/01/2022 11:45"
                    android:textColor="@color/white"
                    android:textSize="14sp" />




            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:padding="5dp"
                    android:src="@drawable/ic_baseline_monetization_on_24" />


                <TextView
                    android:id="@+id/priceTwo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:padding="5dp"
                    android:text="ksh 3,000"
                    android:textColor="@color/white"
                    android:textSize="14sp" />




            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>